# op_course_work_task_8

./: .gitignore  CMakeLists.txt  Makefile  README.md  combinations.cpp  combinations.h  kakurogridwidget.cpp  kakurogridwidget.h  mainwindow.cpp  mainwindow.h  puzzle.cpp  puzzle.h  solver.cpp  solver.h  task8.cpp  tests.cpp
